# aegis-app

./: build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  external_functions.cpp  jni_application.cpp  kotlin_misc.cpp  vm_manager.cpp  vm_manager.h
app/src/main/java/com/emu/aegis/: AegisApp.kt  CachedStorage.kt  ExternalFunctions.kt  MainActivity.kt
app/src/main/java/com/emu/aegis/data/: MangleSettings.kt
app/src/main/java/com/emu/aegis/model/: LiveSettings.kt
app/src/main/java/com/emu/aegis/preference/: AegisSettings.kt
app/src/main/java/com/emu/aegis/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
